# fltrs

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
include/: basematrixfilter.h  blackhatfilter.h  blurfilter.h  brightnessfilter.h  closingfilter.h  complexfilter.h  correctionfilter.h  dilationfilter.h  directpointfilter.h  dynamicmatrixfilter.h  erosionfilter.h  exceptor.h  filter.h  fltrs.inc  functions.h  gammacorrectionfilter.h  gaussianblurfilter.h  glowingedgesfilter.h  grayscalefilter.h  grayworldfilter.h  invertfilter.h  linearcorrectionfilter.h  matrixfilter.h  maximumfilter.h  medianfilter.h  morphologyfilter.h  motionblurfilter.h  openingfilter.h  perfectreflectorfilter.h  pointfilter.h  precompiled.h  referencecolorfilter.h  rotatefilter.h  sepiafilter.h  sharpnessfilter.h  shiftfilter.h  sobelyfilter.h  tophatfilter.h  wavesfilter.h
sample/: CMakeLists.txt  main.cpp
src/: basematrixfilter.cpp  blackhatfilter.cpp  blurfilter.cpp  brightnessfilter.cpp  closingfilter.cpp  complexfilter.cpp  correctionfilter.cpp  dilationfilter.cpp  directpointfilter.cpp  dynamicmatrixfilter.cpp  erosionfilter.cpp  filter.cpp  functions.cpp  gammacorrectionfilter.cpp  gaussianblurfilter.cpp  glowingedgesfilter.cpp  grayscalefilter.cpp  grayworldfilter.cpp  invertfilter.cpp  linearcorrectionfilter.cpp  matrixfilter.cpp  maximumfilter.cpp  medianfilter.cpp  morphologyfilter.cpp  motionblurfilter.cpp  openingfilter.cpp  perfectreflectorfilter.cpp  pointfilter.cpp  referencecolorfilter.cpp  rotatefilter.cpp  sepiafilter.cpp  sharpnessfilter.cpp  shiftfilter.cpp  (+3 more)
